--- a/basic-ml-notebooks/data_analysis_imdb0.ipynb
+++ b/basic-ml-notebooks/data_analysis_imdb0.ipynb
@@ -1076,7 +1076,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": ".torch",
       "language": "python",
       "name": "python3"
     },
