--- a/basic-ml-notebooks/pytorch_tutorial.ipynb
+++ b/basic-ml-notebooks/pytorch_tutorial.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "ed875cfe",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xd/anaconda3/envs/conda_torch/lib/python3.12/site-packages/torch/cuda/__init__.py:174: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "7d6800e7",
    "metadata": {},
    "outputs": [
@@ -47,7 +55,7 @@
        "        [3, 4]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "741ecd97",
    "metadata": {},
    "outputs": [],
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "7f690d52",
    "metadata": {},
    "outputs": [
@@ -84,8 +92,8 @@
       "        [1, 1]]) \n",
       "\n",
       "Random Tensor: \n",
-      " tensor([[0.9106, 0.0301],\n",
-      "        [0.8134, 0.4649]]) \n",
+      " tensor([[0.9496, 0.0637],\n",
+      "        [0.3262, 0.2992]]) \n",
       "\n"
      ]
     }
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "7058d4a2",
    "metadata": {},
    "outputs": [
@@ -137,7 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
+   "id": "e5271acf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "4ec29cc8",
    "metadata": {},
    "outputs": [],
@@ -265,19 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "20e58d24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.1149, 0.8537, 0.6894, 0.9071],\n",
-       "        [0.0180, 0.7565, 0.0609, 0.2186],\n",
-       "        [0.7478, 0.0685, 0.8693, 0.6612]], device='cuda:0')"
+       "tensor([[0.3254, 0.0096, 0.0222, 0.7229],\n",
+       "        [0.0344, 0.3484, 0.1626, 0.1651],\n",
+       "        [0.4874, 0.8650, 0.1118, 0.0982]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "4ba2c4b3",
    "metadata": {},
    "outputs": [
@@ -334,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "bae29e5f",
    "metadata": {},
    "outputs": [
@@ -365,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "8b85a5f3",
    "metadata": {},
    "outputs": [
@@ -373,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cuda device\n"
+      "Using cpu device\n"
      ]
     }
    ],
@@ -384,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "437d2ef7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "device(type='cuda')"
+       "device(type='cpu')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,12 +429,20 @@
    "source": [
     "### Define the Class\n",
     "\n",
-    "We define our neural network by subclassing nn.Module, and initialize the neural network layers in __init__. Every nn.Module subclass implements the operations on input data in the forward method."
+    "We define our neural network by subclassing nn.Module, and initialize the neural network layers in __init__. Every nn.Module subclass implements the operations on input data in the forward method.\n",
+    "\n",
+    "In PyTorch, when you create a custom model by subclassing nn.Module, you must override the forward() method. It tells PyTorch how data flows through your network.\n",
+    "\n",
+    "Behind the scenes, when you call `model(input)`, it actually triggers:\n",
+    "\n",
+    "```python\n",
+    "model.__call__(input) → model.forward(input)\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "d34963f1",
    "metadata": {},
    "outputs": [
@@ -466,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "92a08ac0",
    "metadata": {},
    "outputs": [
@@ -474,7 +500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: tensor([1], device='cuda:0')\n"
+      "Predicted class: tensor([5])\n"
      ]
     }
    ],
@@ -504,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "0aec107d",
    "metadata": {},
    "outputs": [
@@ -526,14 +552,34 @@
    "id": "b038147e",
    "metadata": {},
    "source": [
-    "## nn.Flatten\n",
+    "### nn.Flatten\n",
+    "\n",
+    "`nn.Flatten()` is a PyTorch module that **reshapes** input tensors by flattening all dimensions **except the batch dimension**.\n",
+    "\n",
+    "So, if you have an input like:\n",
+    "\n",
+    "```python\n",
+    "x.shape = (batch_size, channels, height, width)\n",
+    "```\n",
+    "\n",
+    "After `nn.Flatten()`, it becomes:\n",
+    "\n",
+    "```python\n",
+    "x.shape = (batch_size, channels * height * width)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔍 Why flatten?\n",
+    "\n",
+    "Before feeding data into a `Linear` (fully connected) layer, you must collapse spatial dimensions (like width and height) into a single vector — because `Linear` layers expect a 2D input: `(batch_size, features)`.\n",
     "\n",
     "We initialize the nn.Flatten layer to convert each 2D 28x28 image into a contiguous array of 784 pixel values ( the minibatch dimension (at dim=0) is maintained)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "f3b4c9a1",
    "metadata": {},
    "outputs": [
@@ -556,14 +602,14 @@
    "id": "e2cf4369",
    "metadata": {},
    "source": [
-    "## nn.Linear\n",
+    "### nn.Linear\n",
     "\n",
     "The linear layer is a module that applies a linear transformation on the input using its stored weights and biases."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "05e95a14",
    "metadata": {},
    "outputs": [
@@ -586,7 +632,7 @@
    "id": "31e88a7a",
    "metadata": {},
    "source": [
-    "## nn.ReLU\n",
+    "### nn.ReLU\n",
     "\n",
     "Non-linear activations are what create the complex mappings between the model’s inputs and outputs. They are applied after linear transformations to introduce nonlinearity, helping neural networks learn a wide variety of phenomena.\n",
     "\n",
@@ -595,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "69b9bcb3",
    "metadata": {},
    "outputs": [
@@ -603,25 +649,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before ReLU: tensor([[-0.4665, -0.3476,  0.0528,  0.0341, -0.1381, -0.6701,  0.2596, -0.0893,\n",
-      "          0.1842,  0.0037,  0.1799,  0.7648, -0.1874, -0.2829,  0.3908,  0.4948,\n",
-      "          0.0124, -0.0305,  0.1092,  0.4039],\n",
-      "        [-0.3238, -0.3212,  0.0972, -0.1738, -0.4147, -0.6638,  0.1154, -0.1260,\n",
-      "          0.3321, -0.2809,  0.0849,  0.5474,  0.1532, -0.3480,  0.6300,  0.4765,\n",
-      "         -0.2374, -0.0717, -0.2039, -0.0507],\n",
-      "        [-0.4527, -0.2340,  0.2043,  0.1281, -0.0867, -0.2764, -0.2231, -0.4015,\n",
-      "          0.2992, -0.0422, -0.0138,  0.7040,  0.2096, -0.7557,  0.9217,  0.2168,\n",
-      "          0.0439,  0.1405, -0.0802, -0.1206]], grad_fn=<AddmmBackward0>)\n",
+      "Before ReLU: tensor([[ 0.1788,  0.4263, -0.2719, -0.4069,  0.4450, -0.3410,  0.1791,  0.0007,\n",
+      "          0.4072,  0.3851, -0.2438,  0.2442, -0.2389,  0.1168, -0.0740,  0.0526,\n",
+      "         -0.2256,  0.2876, -0.0852, -0.1439],\n",
+      "        [ 0.4297,  0.3652,  0.1637, -0.4328,  0.1047, -0.0369, -0.0022,  0.2297,\n",
+      "          0.3424,  0.1223,  0.2359,  0.1289, -0.3273, -0.1755, -0.3796,  0.1514,\n",
+      "         -0.2080,  0.4252,  0.1097,  0.2704],\n",
+      "        [-0.0137,  0.1504, -0.2537, -0.4160,  0.1492, -0.2969,  0.0397, -0.0317,\n",
+      "          0.1794,  0.4852,  0.2180,  0.3335, -0.6271,  0.0311, -0.4816,  0.1684,\n",
+      "          0.0594,  0.4597, -0.0965, -0.1409]], grad_fn=<AddmmBackward0>)\n",
       "\n",
       "\n",
-      "After ReLU: tensor([[0.0000, 0.0000, 0.0528, 0.0341, 0.0000, 0.0000, 0.2596, 0.0000, 0.1842,\n",
-      "         0.0037, 0.1799, 0.7648, 0.0000, 0.0000, 0.3908, 0.4948, 0.0124, 0.0000,\n",
-      "         0.1092, 0.4039],\n",
-      "        [0.0000, 0.0000, 0.0972, 0.0000, 0.0000, 0.0000, 0.1154, 0.0000, 0.3321,\n",
-      "         0.0000, 0.0849, 0.5474, 0.1532, 0.0000, 0.6300, 0.4765, 0.0000, 0.0000,\n",
+      "After ReLU: tensor([[0.1788, 0.4263, 0.0000, 0.0000, 0.4450, 0.0000, 0.1791, 0.0007, 0.4072,\n",
+      "         0.3851, 0.0000, 0.2442, 0.0000, 0.1168, 0.0000, 0.0526, 0.0000, 0.2876,\n",
       "         0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.2043, 0.1281, 0.0000, 0.0000, 0.0000, 0.0000, 0.2992,\n",
-      "         0.0000, 0.0000, 0.7040, 0.2096, 0.0000, 0.9217, 0.2168, 0.0439, 0.1405,\n",
+      "        [0.4297, 0.3652, 0.1637, 0.0000, 0.1047, 0.0000, 0.0000, 0.2297, 0.3424,\n",
+      "         0.1223, 0.2359, 0.1289, 0.0000, 0.0000, 0.0000, 0.1514, 0.0000, 0.4252,\n",
+      "         0.1097, 0.2704],\n",
+      "        [0.0000, 0.1504, 0.0000, 0.0000, 0.1492, 0.0000, 0.0397, 0.0000, 0.1794,\n",
+      "         0.4852, 0.2180, 0.3335, 0.0000, 0.0311, 0.0000, 0.1684, 0.0594, 0.4597,\n",
       "         0.0000, 0.0000]], grad_fn=<ReluBackward0>)\n"
      ]
     }
@@ -637,25 +683,25 @@
    "id": "da19414e",
    "metadata": {},
    "source": [
-    "## nn.Softmax\n",
+    "### nn.Softmax\n",
     "\n",
     "The last linear layer of the neural network returns logits - raw values in [-infty, infty] - which are passed to the nn.Softmax module. The logits are scaled to values [0, 1] representing the model’s predicted probabilities for each class. dim parameter indicates the dimension along which the values must sum to 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "66b7f7fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.1009, 0.1086, 0.0970, 0.1029, 0.1009, 0.0933, 0.1058, 0.0949, 0.1058,\n",
-       "         0.0899]], device='cuda:0', grad_fn=<SoftmaxBackward0>)"
+       "tensor([[0.1104, 0.0905, 0.0868, 0.1055, 0.0861, 0.1160, 0.0944, 0.1024, 0.1034,\n",
+       "         0.1045]], grad_fn=<SoftmaxBackward0>)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +717,7 @@
    "id": "c43f98ec",
    "metadata": {},
    "source": [
-    "## Model Parameters\n",
+    "### Model Parameters\n",
     "\n",
     "Many layers inside a neural network are parameterized, i.e. have associated weights and biases that are optimized during training. Subclassing nn.Module automatically tracks all fields defined inside your model object, and makes all parameters accessible using your model’s parameters() or named_parameters() methods.\n",
     "\n",
@@ -680,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "af2488e2",
    "metadata": {},
    "outputs": [
@@ -700,23 +746,23 @@
       ")\n",
       "\n",
       "\n",
-      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[-0.0320, -0.0269,  0.0155,  ..., -0.0074,  0.0117, -0.0110],\n",
-      "        [ 0.0019, -0.0084, -0.0140,  ...,  0.0065, -0.0048,  0.0286]],\n",
-      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0070,  0.0112,  0.0121,  ..., -0.0317,  0.0171, -0.0028],\n",
+      "        [-0.0024, -0.0303,  0.0152,  ...,  0.0244,  0.0247, -0.0324]],\n",
+      "       grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([0.0225, 0.0244], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0054,  0.0305], grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[-0.0057, -0.0141, -0.0111,  ..., -0.0381,  0.0251, -0.0294],\n",
-      "        [ 0.0102,  0.0093,  0.0409,  ...,  0.0082, -0.0003, -0.0075]],\n",
-      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[ 0.0313, -0.0302, -0.0215,  ...,  0.0061,  0.0328, -0.0425],\n",
+      "        [-0.0018,  0.0051,  0.0399,  ...,  0.0174,  0.0170, -0.0050]],\n",
+      "       grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([ 0.0210, -0.0027], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([-0.0012, -0.0021], grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[-0.0277,  0.0044,  0.0169,  ..., -0.0366,  0.0342, -0.0022],\n",
-      "        [ 0.0075,  0.0097,  0.0234,  ...,  0.0374,  0.0409,  0.0045]],\n",
-      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[-0.0315,  0.0336, -0.0427,  ...,  0.0170,  0.0164,  0.0160],\n",
+      "        [ 0.0095,  0.0339, -0.0315,  ..., -0.0418,  0.0239, -0.0217]],\n",
+      "       grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([ 0.0436, -0.0034], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([ 0.0162, -0.0116], grad_fn=<SliceBackward0>) \n",
       "\n"
      ]
     }
@@ -727,11 +773,92 @@
     "for name, param in model.named_parameters():\n",
     "    print(f\"Layer: {name} | Size: {param.size()} | Values : {param[:2]} \\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9b6c4b",
+   "metadata": {},
+   "source": [
+    "### Automatic Differentiation\n",
+    "\n",
+    "When training neural networks, the most frequently used algorithm is back propagation. In this algorithm, parameters (model weights) are adjusted according to the gradient of the loss function with respect to the given parameter.\n",
+    "\n",
+    "To compute those gradients, PyTorch has a built-in differentiation engine called torch.autograd. It supports automatic computation of gradient for any computational graph.\n",
+    "\n",
+    "Consider the simplest one-layer neural network, with input x, parameters w and b, and some loss function. It can be defined in PyTorch in the following manner:\n",
+    "\n",
+    "![image info](../images/comp-graph.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "999f3c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.ones(5)  # input tensor\n",
+    "y = torch.zeros(3)  # expected output\n",
+    "w = torch.randn(5, 3, requires_grad=True)\n",
+    "b = torch.randn(3, requires_grad=True)\n",
+    "z = torch.matmul(x, w)+b\n",
+    "loss = torch.nn.functional.binary_cross_entropy_with_logits(z, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef7455b3",
+   "metadata": {},
+   "source": [
+    "### Computing Gradients\n",
+    "\n",
+    "To optimize weights of parameters in the neural network, we need to compute the derivatives of our loss function with respect to parameters, namely, we need \n",
+    "  $\\frac{\\partial \\text{Loss}}{\\partial W}$ and\n",
+    "    $\\frac{\\partial \\text{Loss}}{\\partial b}$\n",
+    "  under some fixed values of x and y. To compute those derivatives, we call loss.backward(), and then retrieve the values from w.grad and b.grad:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e22cd0aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3055, 0.0330, 0.1962],\n",
+      "        [0.3055, 0.0330, 0.1962],\n",
+      "        [0.3055, 0.0330, 0.1962],\n",
+      "        [0.3055, 0.0330, 0.1962],\n",
+      "        [0.3055, 0.0330, 0.1962]])\n",
+      "tensor([0.3055, 0.0330, 0.1962])\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss.backward()\n",
+    "print(w.grad)\n",
+    "print(b.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef29f05e",
+   "metadata": {},
+   "source": [
+    "Note:\n",
+    "\n",
+    "- We can only obtain the `grad` properties for the leaf nodes of the computational graph, which have `requires_grad` property set to `True`. For all other nodes in our graph, gradients will not be available.\n",
+    "\n",
+    "- We can only perform gradient calculations using `backward` once on a given graph, for performance reasons. If we need to do several `backward` calls on the same graph, we need to pass `retain_graph=True` to the `backward` call."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".torch",
+   "display_name": "conda_torch",
    "language": "python",
    "name": "python3"
   },
@@ -745,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
