--- a/pytorch_DLNN/ANN/ANN.ipynb
+++ b/pytorch_DLNN/ANN/ANN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "e47ccf4d",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "df5f80cc",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "    x = F.relu(self.fc1(x))\n",
     "    x = F.relu(self.fc2(x))\n",
     "    x = self.fc3(x)\n",
-    "    return x"
+    "    return x  "
    ]
   },
   {
@@ -211,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_gpu",
+   "display_name": "torch_env",
    "language": "python",
    "name": "python3"
   },
