some CNN changes

--- a/pytorch_DLNN/CNN/CNN.ipynb
+++ b/pytorch_DLNN/CNN/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7f21d267",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1e809626",
    "metadata": {},
    "outputs": [],
@@ -49,48 +49,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "2d89266f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data = torch.randint(255, (10000, 28, 28), dtype=torch.uint8)\n",
+    "images = torch.randint(0, 255, (10000, 28, 28), dtype=torch.uint8)\n",
+    "labels = torch.randint(0, 9, (10000,), dtype=torch.int8)\n",
     "\n",
     "transormer = torchvision.transforms.Compose([torchvision.transforms.ConvertImageDtype(torch.float32),\n",
     "                                             torchvision.transforms.Normalize((0.5,), (0.5,))])\n",
-    "transformed_data = transormer(input_data)\n",
+    "transformed_data = transormer(images)\n",
     "\n",
-    "train_data, val_data = torch.utils.data.random_split(transformed_data, [8000, 2000])\n",
+    "# wraping images and labels\n",
+    "input_data = torch.utils.data.TensorDataset(transformed_data, labels)\n",
     "\n",
-    "train_loader = torch.utils.data.DataLoader(train_data, batch_size=10, num_workers=1)\n",
-    "val_loader = torch.utils.data.DataLoader(val_data, batch_size=10, num_workers=1)"
+    "train_data, val_data = torch.utils.data.random_split(input_data, [8000, 2000])\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_data, batch_size=64, num_workers=1)\n",
+    "val_loader = torch.utils.data.DataLoader(val_data, batch_size=64, num_workers=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5c706920",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m CNN(hidden1_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m256\u001b[39m, hidden_size2\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m256\u001b[39m, output_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m images, labels \u001b[38;5;129;01min\u001b[39;00m train_loader:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(images, labels)\n\u001b[1;32m      5\u001b[0m   \u001b[38;5;66;03m# model.train()\u001b[39;00m\n\u001b[1;32m      6\u001b[0m   \u001b[38;5;66;03m# outputs = model(images)\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4018/2550197477.py:24: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  outputs = torch.nn.functional.softmax(self.ol(fc2_out))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n",
+      "torch.Size([64, 28, 28])\n"
      ]
     }
    ],
    "source": [
     "model = CNN(hidden1_size=256, hidden_size2=256, output_size=10)\n",
     "\n",
-    "for images, labels in train_loader:\n",
-    "  print(images, labels)\n",
-    "  # model.train()\n",
-    "  # outputs = model(images)"
+    "for i, (images, labels) in enumerate(train_loader):\n",
+    "  print(images.shape)\n",
+    "  model.train()\n",
+    "  outputs = model(images.unsqueeze(1))"
    ]
   }
  ],
