logistic regression on income dataset

--- a/pytorch_DLNN/CNN/CNN.ipynb
+++ b/pytorch_DLNN/CNN/CNN.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "7f21d267",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch, torchvision\n",
+    "import torch\n",
+    "import torchvision\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "1e809626",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "2d89266f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "cd9934b7",
    "metadata": {},
    "outputs": [
@@ -99,27 +100,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "5c706920",
+   "execution_count": 10,
+   "id": "12e27e98",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: Train Loss=0.6495, Val Loss=0.1021, Val Acc=0.9681\n",
-      "Epoch 2: Train Loss=0.0889, Val Loss=0.0670, Val Acc=0.9787\n",
-      "Epoch 3: Train Loss=0.0631, Val Loss=0.0562, Val Acc=0.9819\n",
-      "Epoch 4: Train Loss=0.0500, Val Loss=0.0492, Val Acc=0.9842\n",
-      "Epoch 5: Train Loss=0.0410, Val Loss=0.0474, Val Acc=0.9854\n",
-      "Epoch 6: Train Loss=0.0338, Val Loss=0.0465, Val Acc=0.9862\n",
-      "Epoch 7: Train Loss=0.0277, Val Loss=0.0462, Val Acc=0.9866\n",
-      "Epoch 8: Train Loss=0.0229, Val Loss=0.0464, Val Acc=0.9869\n",
-      "Epoch 9: Train Loss=0.0188, Val Loss=0.0514, Val Acc=0.9863\n",
-      "Epoch 10: Train Loss=0.0173, Val Loss=0.0554, Val Acc=0.9855\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Dataset MNIST\n",
+       "    Number of datapoints: 60000\n",
+       "    Root location: ../../.datasets/\n",
+       "    Split: Train\n",
+       "    StandardTransform\n",
+       "Transform: Compose(\n",
+       "               ToTensor()\n",
+       "               Grayscale(num_output_channels=1)\n",
+       "               Normalize(mean=(0.5,), std=(0.5,))\n",
+       "           )"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "input_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c706920",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model = CNN(hidden1_size=64, hidden_size2=64, output_size=10).to(device)\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
