--- a/pytorch_DLNN/pytorch_tutorial.ipynb
+++ b/pytorch_DLNN/pytorch_tutorial.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ed875cfe",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xd/anaconda3/envs/conda_torch/lib/python3.12/site-packages/torch/cuda/__init__.py:174: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,6 +22,31 @@
     "import numpy as np\n",
     "\n",
     "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "80f98a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2., -2.],\n",
+       "        [ 2.,  2.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor([[1., -1.], [1., 1.]], requires_grad=True)\n",
+    "out = x.pow(2).sum()\n",
+    "out.backward()\n",
+    "x.grad"
    ]
   },
   {
@@ -44,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7d6800e7",
    "metadata": {},
    "outputs": [
@@ -55,7 +72,7 @@
        "        [3, 4]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "999f3c17",
    "metadata": {},
    "outputs": [],
@@ -858,7 +875,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_torch",
+   "display_name": "torch_env_latest",
    "language": "python",
    "name": "python3"
   },
@@ -872,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
