--- a/basic-ml-notebooks/supervised/logistic_regression.ipynb
+++ b/basic-ml-notebooks/supervised/logistic_regression.ipynb
@@ -83,6 +83,7 @@
     "numeric_columns = df.select_dtypes(include=['int64', 'float64', 'float32']).columns\n",
     "categoric_columns = df.select_dtypes(include=['object']).columns.drop(\"income\")\n",
     "\n",
+    "# Removes any empty values such as NaN\n",
     "imputer = impute.SimpleImputer(strategy='most_frequent')\n",
     "df[categoric_columns] = imputer.fit_transform(df[categoric_columns])\n",
     "\n",
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "a1d73584",
    "metadata": {},
    "outputs": [
@@ -157,8 +158,6 @@
    ],
    "source": [
     "y_pred = logistic_reg.predict(X_test)\n",
-    "print(y_pred[:10])\n",
-    "print(y_test.values[:10])   # use .values to get NumPy array\n",
     "\n",
     "accuracy = sum([1 for i, label in enumerate(y_pred) if label == y_test.values[i]])\n",
     "print(accuracy/len(y_test.values))\n"
